# simdjson

./: .appveyor.yml  .cirrus.yml  .clangd  .drone.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Doxyfile  HACKING.md  LICENSE  README.md  amalgamated_8h_source.html  annotated.html  annotated_dup.js  arm64_2base_8h_source.html  arm64_2begin_8h_source.html  arm64_2bitmanipulation_8h_source.html  arm64_2bitmask_8h_source.html  arm64_2end_8h_source.html  arm64_2implementation_8h_source.html  arm64_2intrinsics_8h_source.html  arm64_2numberparsing__defs_8h_source.html  arm64_2ondemand_8h_source.html  arm64_2simd_8h_source.html  arm64_2stringparsing__defs_8h_source.html  arm64_8h_source.html  array__iterator-inl_8h_source.html  array__iterator_8h_source.html  atomic__ptr_8h_source.html  atomparsing_8h_source.html  base_8h_source.html  builtin_2base_8h_source.html  builtin_2implementation_8h_source.html  builtin_2ondemand_8h_source.html  builtin_8h_source.html  classes.html  classsimdjson2_1_1_s_i_m_d_j_s_o_n2___i_m_p_l_e_m_e_n_t_a_t_i_o_n_1_1dom__parser__implementation-members.html  classsimdjson2_1_1_s_i_m_d_j_s_o_n2___i_m_p_l_e_m_e_n_t_a_t_i_o_n_1_1dom__parser__implementation.html  (+375 more)
.circleci/: config.yml
.github/: pull_request_template.md
benchmark/: CMakeLists.txt  bench_dom_api.cpp  bench_ondemand.cpp  bench_parse_call.cpp  benchfeatures.cpp  benchmarker.h  event_counter.h  get_corpus_benchmark.cpp
benchmark/accessor_performance/: accessor_benchmark.h
benchmark/amazon_cellphones/: amazon_cellphones.h  jsonifier.h  simdjson2_dom.h  simdjson2_ondemand.h  simdjson_ondemand.h
benchmark/distinct_user_id/: boostjson.h  distinct_user_id.h  jsonifier.h  nlohmann_json.h  nlohmann_json_sax.h  rapidjson.h  rapidjson_sax.h  sajson.h  simdjson2_dom.h  simdjson2_dom_json_pointer.h  simdjson2_ondemand.h  simdjson2_ondemand_json_pointer.h  simdjson_ondemand.h  yyjson.h
benchmark/dom/: CMakeLists.txt  checkperf.cmake  parse.cpp  parse_stream.cpp  statisticalmodel.cpp
benchmark/find_tweet/: boostjson.h  find_tweet.h  jsonifier.h  nlohmann_json.h  nlohmann_json_sax.h  rapidjson.h  rapidjson_sax.h  sajson.h  simdjson2_dom.h  simdjson2_ondemand.h  simdjson_ondemand.h  yyjson.h
benchmark/json2msgpack/: boostjson.h  json2msgpack.h  jsonifier.h  nlohmann_json.h  rapidjson.h  sajson.h  simdjson2_dom.h  simdjson2_ondemand.h  yyjson.h
benchmark/json_benchmark/: constants.h  diff_results.h  file_runner.h  point.h  run_json_benchmark.h  runner_base.h  string_runner.h
benchmark/kostya/: boostjson.h  jsonifier.h  kostya.h  nlohmann_json.h  nlohmann_json_sax.h  rapidjson.h  rapidjson_sax.h  sajson.h  simdjson2_dom.h  simdjson2_ondemand.h  simdjson_ondemand.h  yyjson.h
benchmark/large_amazon_cellphones/: jsonifier.h  large_amazon_cellphones.h  simdjson2_dom.h  simdjson2_ondemand.h  simdjson_ondemand.h
benchmark/large_random/: boostjson.h  jsonifier.h  large_random.h  nlohmann_json.h  nlohmann_json_sax.h  rapidjson.h  rapidjson_sax.h  sajson.h  simdjson2_dom.h  simdjson2_ondemand.h  simdjson2_ondemand_unordered.h  simdjson_ondemand.h  yyjson.h
benchmark/largerandom/: iter.h  ondemand.h  sax.h
benchmark/partial_tweets/: boostjson.h  jsonifier.h  nlohmann_json.h  nlohmann_json_sax.h  ondemand.h  partial_tweets.h  rapidjson.h  rapidjson_sax.h  sajson.h  simdjson2_dom.h  simdjson2_ondemand.h  simdjson_ondemand.h  tweet.h  twitter_user.h  yyjson.h
benchmark/top_tweet/: boostjson.h  jsonifier.h  nlohmann_json.h  nlohmann_json_sax.h  rapidjson.h  rapidjson_sax.h  sajson.h  simdjson2_dom.h  simdjson2_ondemand.h  simdjson_ondemand.h  top_tweet.h  yyjson.h
benchmark/twitter_full/: jsonifier.h  simdjson_ondemand.h  twitter_full.h
cmake/: developer-options.cmake  exception-flags.cmake  handle-deprecations.cmake  implementation-flags.cmake  simdjson2-config.cmake.in  simdjson2-props.cmake  simdjson2-user-cmakecache.cmake
dependencies/: CMakeLists.txt
doc/: basics.md  basics_doxygen.md  dom.md  implementation-selection.md  iterate_many.md  ondemand_design.md  parse_many.md  performance.md  tape.md
fuzz/: CMakeLists.txt  FuzzUtils.h  Fuzzing.md  build_fuzzer_variants.sh  fuzz_atpointer.cpp  fuzz_dump.cpp  fuzz_dump_raw_tape.cpp  fuzz_element.cpp  fuzz_implementations.cpp  fuzz_minify.cpp  fuzz_minifyimpl.cpp  fuzz_ndjson.cpp  fuzz_ondemand.cpp  fuzz_padded.cpp  fuzz_parser.cpp  fuzz_print_json.cpp  fuzz_utf8.cpp  measure_coverage.sh  ossfuzz.sh  quick_check.sh  supported_implementations.h
include/: simdjson2.h
jsonexamples/: CMakeLists.txt
scripts/: plotparse.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  (+59 more)
singleheader/: CMakeLists.txt  README.md  amalgamate.py  amalgamate_demo.cpp  simdjson.cpp  simdjson.h  simdjson2.cpp
src/: arm64.cpp  base.h  fallback.cpp  from_chars.cpp  haswell.cpp  icelake.cpp  implementation.cpp  lasx.cpp  lsx.cpp  ppc64.cpp  simdjson2.cpp  to_chars.cpp  westmere.cpp
sweep_results_msvc/: msvc-max16-step.csv  msvc-max16-step.log.build  msvc-max16-step.log.cmake  msvc-max16-step4.csv  msvc-max16-step4.log.build  msvc-max16-step4.log.cmake  (+17 more)
tests/dom/: CMakeLists.txt  allparserscheckfile.cpp  basictests.cpp  document_stream_tests.cpp  document_tests.cpp  errortests.cpp  extracting_values_example.cpp  integer_tests.cpp  issue150.sh  json_path_tests.cpp  jsoncheck.cpp  minefieldcheck.cpp  numberparsingcheck.cpp  parse_many_test.cpp  pointercheck.cpp  random_string_number_tests.cpp  readme_examples.cpp  readme_examples_noexceptions.cpp  singleheadertest.cpp  stringparsingcheck.cpp  testjson2json.sh  trivially_copyable_test.cpp
windows/: CMakeLists.txt  dirent_portable.h  getopt.h
(+289 files in other folders)
